--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,20 @@
     "configurations": [
         {
             "type": "java",
+            "name": "Principal",
+            "request": "launch",
+            "mainClass": "ut02.carrera.Principal",
+            "projectName": "psp-2324_3a25bd6d"
+        },
+        {
+            "type": "java",
+            "name": "Principal",
+            "request": "launch",
+            "mainClass": "ut01.threads.Principal",
+            "projectName": "psp-2324_3a25bd6d"
+        },
+        {
+            "type": "java",
             "name": "ProcessBuilderPow",
             "request": "launch",
             "mainClass": "ProcessBuilderPow",
